testsuite/gsksl/errors/condition-in-conditional-is-not-bool.glsl

void
main  ()
{
  int b;
  int y = b ? 1 : 0;
}
